fix collapse button overflow, closes #348

--- a/frontend/src/components/Mermaid.scss
+++ b/frontend/src/components/Mermaid.scss
@@ -10,8 +10,8 @@ button.collapse-expand {
   // undo hiding for export purposes
   display: block !important;
   position: absolute;
-  right: -2rem;
-  bottom: -1.5rem;
+  right: -1rem;
+  bottom: -1rem;
   width: 2.5rem;
   height: 2.5rem;
   border-radius: 100%;
